extends Node2D


func _on_Button_pressed():
	get_tree().change_scene("res://cena1.tscn")

func _on_Button2_pressed():
	get_tree().change_scene("res://cena2.tscn")
	
func _on_Button3_pressed():
	get_tree().change_scene("res://cena3.tscn")
	
func _on_Button4_pressed():
	get_tree().change_scene("res://cena4.tscn")
